# problemasProgramacion

./: .gitignore  CMakeLists.txt  README.md
Archivos/: agenda.txt  archivo  archivo.txt  archivo1.cpp  archivo1.txt  archivo2.txt  lecturaBinario.cpp  lecturabinario  problema1  problema1.cpp  problema2  problema2.cpp  problema3  problema3.cpp  problema4  problema4.cpp  problema5  problema5.cpp  problema6  problema6.cpp  problema7  problema7.cpp  transacciones.txt
Arrays/: problema1  problema1.cpp  problema10  problema10.cpp  problema11.cpp  problema2  problema2.cpp  problema3  problema3.cpp  problema4  problema4.cpp  problema5  problema5.cpp  problema6  problema6.cpp  problema7  problema7.cpp  problema8.cpp  problema9  problema9.cpp
Estructuras/: problema1  problema1.cpp  problema2  problema2.cpp  problema3  problema3.cpp  problema4  problema4.cpp
Parciales/2022_02_parcial1/problema1/: datos.txt  encriptado.txt  encriptar  encriptar.cpp  guardarEnc  guardarEncriptado.cpp  leerDatos  leerDatos.cpp  leerDatos2  leerDatos2.cpp  parcial_01_2022_02.md
Parciales/2022_02_parcial1/problema2/: archivoBinario.cpp  archivosTexto.cpp  binario  inicial.txt  parcial_01_2022_02.md  supletorio.txt  texto
Punteros/: problema1  problema1.cpp  problema2  problema2.cpp  problema3  problema3.cpp  problema4.cpp  problema5  problema5.cpp  problemas4
