cmake_minimum_required(VERSION 3.24)
project(problemasProgramacion)

set(CMAKE_CXX_STANDARD 17)

add_executable(problemasProgramacion main.cpp Arrays/problema1.cpp Arrays/problema2.cpp Arrays/problema3.cpp Arrays/problema4.cpp Arrays/problema5.cpp Arrays/problema6.cpp Arrays/problema7.cpp Arrays/problema8.cpp Arrays/problema9.cpp Arrays/problema10.cpp Arrays/problema11.cpp)
