cmake_minimum_required(VERSION 3.24)
project(problemasProgramacion)

set(CMAKE_CXX_STANDARD 17)

add_executable(problemasProgramacion main.cpp Arrays/problema1.cpp Arrays/problema2.cpp Arrays/problema3.cpp Arrays/problema4.cpp Arrays/problema5.cpp Arrays/problema6.cpp Arrays/problema7.cpp Arrays/problema8.cpp Arrays/problema9.cpp Arrays/problema10.cpp Arrays/problema11.cpp Estructuras/problema1.cpp Estructuras/problema2.cpp Estructuras/problema3.cpp Estructuras/problema4.cpp Punteros/problema1.cpp Punteros/problema2.cpp Punteros/problema3.cpp Punteros/problema4.cpp Punteros/problema5.cpp Archivos/problema1.cpp Archivos/problema2.cpp Archivos/problema3.cpp Archivos/problema4.cpp Archivos/problema5.cpp Archivos/archivo1.cpp Archivos/lecturaBinario.cpp Archivos/problema6.cpp Archivos/problema7.cpp)
